Working on desktop styling

--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -61,6 +61,7 @@ $space-l-4: 5.25rem; /* 84px */
 $space-xl-1: 5.5rem; /* 88px */
 $space-xl-2: 5.75rem; /* 92px */
 $space-xl-3: 6.875rem; /* 110px */
+$space-xl-5: 7.375rem;/* 118px */
 $space-xl-4: 7.8125rem; /* 125px */
 
 /* Borders */
