--- a/assets/stylesheets/_what-is-it-section.scss
+++ b/assets/stylesheets/_what-is-it-section.scss
@@ -54,6 +54,7 @@
   color: $primary-color-1;
   font-weight: $font-weight-black;
   letter-spacing: $letter-spacing;
+  font-size: $font-size-xs;
 }
 
 @media (min-width: $tablet-layout-width) {
@@ -80,6 +81,20 @@
     img {
       width: 10.25rem; /*164px*/
       height: 9.75rem; /*156px*/
+    }
+  }
+}
+
+@media (min-width: $desktop-layout-width) {
+  #what-is-it {
+    column-gap: $space-s-4;
+    padding: $space-medium-3 $space-none $space-l-3 $space-none;
+    row-gap: $space-s-3;
+    grid-template-rows: auto $space-s-4 auto;
+
+    img {
+      width: 15.9375rem; /*255px*/
+      height: 15.125rem; /*242px*/
     }
   }
 }
