Working on desktop stylings

--- a/assets/stylesheets/_reset.scss
+++ b/assets/stylesheets/_reset.scss
@@ -36,6 +36,9 @@ body {
 h1,
 h2 {
   line-height: 1.1; /* Set shorter line heights on headings and interactive elements */
+}
+
+h1 {
   text-wrap: balance; /* Balance text wrapping on headings */
 }
 
