--- a/assets/stylesheets/_footer.scss
+++ b/assets/stylesheets/_footer.scss
@@ -63,3 +63,30 @@ footer {
     }
   }
 }
+
+@media (min-width: $desktop-layout-width) {
+  .footer {
+    grid-template-areas:
+      "heading paragraph action"
+      ". . ."
+      ". . .";
+    row-gap: $space-xl-1;
+    column-gap: $space-xl-2;
+    text-align: left;
+    padding: $space-xl-1 $space-none $space-none $space-none;
+    align-items: center;
+    min-width: 69.375rem; /* 1110px */
+
+    %max-width {
+      max-width: 21.875rem; /* 350px */
+    }
+    p {
+      @extend %max-width;
+      padding-left: 2.0625rem; /* 33px */
+    }
+
+    h2 {
+      @extend %max-width;
+    }
+  }
+}
