Refactoring the mobile styles

--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -16,6 +16,7 @@ $neutral-color-3: hsl(240, 10%, 57%, 0.25);
 $neutral-color-4: hsl(0, 0%, 98%);
 $neutral-color-5: hsl(0, 0%, 100%);
 $neutral-color-6: hsl(0, 0%, 85%);
+$neutral-color-7: hsl(240, 10%, 57%);
 
 /* Typography */
 $font-size-xs: 1rem; /* 16px */
@@ -37,7 +38,7 @@ $letter-spacing: 0.25rem; /* 4px */
 $space-none: 0rem;
 $space-xs-5: 0.0625rem; /* 1px */
 $space-xs-1: 0.25rem; /* 4px */
-$space-xs-6: 0.5rem; /*8px*/
+$space-xs-6: 0.5rem; /* 8px */
 $space-xs-2: 0.6875rem; /* 11px */
 $space-xs-3: 0.9375rem; /* 15px */
 $space-xs-4: 1rem; /* 16px */
@@ -62,7 +63,7 @@ $space-xl-1: 5.5rem; /* 88px */
 $space-xl-2: 5.75rem; /* 92px */
 $space-xl-6: 6.5rem; /* 104px */
 $space-xl-3: 6.875rem; /* 110px */
-$space-xl-5: 7.375rem;/* 118px */
+$space-xl-5: 7.375rem; /* 118px */
 $space-xl-4: 7.8125rem; /* 125px */
 
 /* Borders */
