--- a/assets/stylesheets/_common.scss
+++ b/assets/stylesheets/_common.scss
@@ -1,14 +1,14 @@
 @font-face {
   font-family: "Red Hat Display";
   src: url("./assets/fonts/RedHatDisplay-Black.ttf") format("truetype");
-  font-weight: 900;
+  font-weight: $font-weight-black;
   font-display: swap;
 }
 
 @font-face {
   font-family: "Red Hat Display";
   src: url("./assets/fonts/RedHatDisplay-Medium.ttf") format("truetype");
-  font-weight: 500;
+  font-weight: $font-weight-medium;
   font-display: swap;
 }
 
@@ -17,7 +17,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 100%; /* RRC: Study the min-width, max-width*/
+  min-width: 100%;
 }
 
 body {
@@ -104,11 +104,11 @@ a {
 
 a {
   text-decoration: none;
-  min-width: 8.6875rem; /* 139px*/ /*RRC: Explore this - min-width , max-width*/
+  min-width: 8.6875rem; /* 139px */
 }
 
 button {
-  min-width: 12.0625rem; /* 193px*/ /*RRC: Explore this - min-width , max-width*/
+  min-width: 12.0625rem; /* 193px */
 }
 
 article {
@@ -121,7 +121,7 @@ article {
 
 .demarcation-section {
   .number {
-    color: $neutral-color-2;
+    color: $neutral-color-7;
     font-weight: $font-weight-black;
     border: $border-width-s solid $neutral-color-3;
     border-radius: $border-radius-rounded;
@@ -137,7 +137,7 @@ article {
     width: $space-xs-5;
     height: $space-l-4;
     background-color: $neutral-color-3;
-    transform: translateX(1.75rem);
+    transform: translateX(1.75rem); /* 28px */
   }
 }
 
