--- a/assets/stylesheets/_what-is-it-section.scss
+++ b/assets/stylesheets/_what-is-it-section.scss
@@ -67,7 +67,7 @@
   }
 
   #what-is-it {
-    padding: $space-l-1 $space-none $space-l-3 $space-none;
+    padding: $space-l-1 $space-none $space-l-3;
     grid-template-areas:
       "image-woman-in-videocall image-women-videochatting image-men-in-meeting image-man-texting"
       ". . . ."
