--- a/assets/stylesheets/_what-is-it-section.scss
+++ b/assets/stylesheets/_what-is-it-section.scss
@@ -87,7 +87,7 @@
 @media (min-width: $desktop-layout-width) {
   #what-is-it {
     column-gap: $space-s-4;
-    padding: $space-medium-3 $space-none $space-l-3 $space-none;
+    padding: $space-medium-3 $space-none $space-l-2;
     row-gap: $space-s-3;
     grid-template-rows: auto $space-s-4 auto;
 
