Adding the focus and focus-visible style for buttons and links

--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -72,3 +72,4 @@ $border-radius-soft: 0.5rem; /* 8px */
 $border-radius-rounded: 1.8125rem; /* 29px */
 $border-width-none: 0rem;
 $border-width-s: 0.0625rem; /* 1px */
+$border-width-m: 0.25rem; /* 4px */
