--- a/assets/stylesheets/_common.scss
+++ b/assets/stylesheets/_common.scss
@@ -76,6 +76,13 @@ a {
   &:hover {
     cursor: pointer;
   }
+
+  &:focus-visible,
+  &:focus {
+    box-shadow: 0 0 0 $border-width-m $neutral-color-1;
+    outline: none;
+    outline-offset: 0;
+  }
 }
 
 @mixin button-styles($default-button-color, $text-color, $hover-button-color) {
