--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@
 /* 8px */
 /* 29px */
 /* 1px */
+/* 4px */
 /* Layout widths */
 /* Colors */
 /* Typography */
@@ -96,6 +97,7 @@
 /* 8px */
 /* 29px */
 /* 1px */
+/* 4px */
 /* Box sizing rules */
 *,
 *::before,
@@ -226,6 +228,13 @@ a {
 button:hover,
 a:hover {
   cursor: pointer;
+}
+button:focus-visible, button:focus,
+a:focus-visible,
+a:focus {
+  box-shadow: 0 0 0 0.25rem hsl(239, 21%, 20%);
+  outline: none;
+  outline-offset: 0;
 }
 
 .btn--primary {
