Testing the image dimensions

--- a/assets/stylesheets/_intro-section.scss
+++ b/assets/stylesheets/_intro-section.scss
@@ -7,8 +7,8 @@
   row-gap: $space-base-4;
 
   img {
-    width: 11rem; /* 176px */
-    height: 9.5625rem; /* 153px */
+    // width: 11rem; /* 176px */
+    // height: 9.5625rem; /* 153px */
 
     &:first-child {
       grid-area: hero-left;
