Testing with image dimensions

--- a/assets/stylesheets/_intro-section.scss
+++ b/assets/stylesheets/_intro-section.scss
@@ -73,8 +73,8 @@
     justify-items: center;
 
     img {
-      width: 23rem; /* 368px */
-      height: 18.9375rem; /* 303px */
+      // width: 23rem; /* 368px */
+      // height: 18.9375rem; /* 303px */
     }
   }
 }
