Testing image dimensions

--- a/assets/stylesheets/_intro-section.scss
+++ b/assets/stylesheets/_intro-section.scss
@@ -87,8 +87,8 @@
     padding-bottom: $space-xl-5;
 
     img {
-      width: 18rem; /* 288px */
-      height: 14rem; /* 224px */
+      // width: 18rem; /* 288px */
+      // height: 14rem; /* 224px */
     }
   }
 
