--- a/assets/stylesheets/_footer.scss
+++ b/assets/stylesheets/_footer.scss
@@ -30,8 +30,8 @@ footer {
 }
 
 .footer-background {
-  // height: 26.75rem; /* 428px */
-  // width: 100%;
+  height: 26.75rem; /* 428px */
+  width: 100%;
   position: absolute;
   bottom: 0;
   z-index: -1;
@@ -83,6 +83,6 @@ footer {
   }
 
   .footer-background {
-    // height: 19.25rem; /* 308px */
+    height: 19.25rem; /* 308px */
   }
 }
