--- a/assets/stylesheets/_footer.scss
+++ b/assets/stylesheets/_footer.scss
@@ -30,6 +30,8 @@ footer {
 }
 
 .footer-background {
+  height: 26.75rem; /* 428px */
+  width: 100%;
   position: absolute;
   bottom: 0;
   z-index: -1;
@@ -78,6 +80,10 @@ footer {
     button {
       margin-top: $space-none;
     }
+  }
+
+  .footer-background {
+    height: 19.25rem; /* 308px */
   }
 }
 //RRC: Why the distortion of aspect ratio is happening?
