--- a/style.css
+++ b/style.css
@@ -345,6 +345,10 @@ article p {
   column-gap: 1rem;
   row-gap: 3rem;
 }
+#intro-section img {
+  width: 11rem; /* 176px */
+  height: 9.5625rem; /* 153px */
+}
 #intro-section img:first-child {
   grid-area: hero-left;
 }
@@ -385,6 +389,10 @@ article p {
     row-gap: 4.5rem;
     justify-items: center;
   }
+  #intro-section img {
+    width: 23rem; /* 368px */
+    height: 18.9375rem; /* 303px */
+  }
 }
 @media (min-width: 80rem) {
   #intro-section {
@@ -392,6 +400,10 @@ article p {
     column-gap: 5.5rem;
     align-items: center;
     padding-bottom: 7.375rem;
+  }
+  #intro-section img {
+    width: 18rem; /* 288px */
+    height: 14rem; /* 224px */
   }
   #intro-section__article {
     padding: 2.9375rem 0rem 0rem 0rem; /* 47px = 2.9375rem */
@@ -505,6 +517,8 @@ footer {
 }
 
 .footer-background {
+  height: 26.75rem; /* 428px */
+  width: 100%;
   position: absolute;
   bottom: 0;
   z-index: -1;
@@ -543,5 +557,8 @@ footer {
   }
   .footer button {
     margin-top: 0rem;
+  }
+  .footer-background {
+    height: 19.25rem; /* 308px */
   }
 }
