--- a/assets/stylesheets/_intro-section.scss
+++ b/assets/stylesheets/_intro-section.scss
@@ -86,9 +86,11 @@
     align-items: center;
     padding-bottom: $space-xl-5;
 
-    img {
-      width: 18rem; /* 288px */
-      height: 14rem; /* 224px */
+    img {  /*394 x 303*/
+      // width: 18rem; /* 288px */
+      // height: 14rem; /* 224px */
+      width: 24.625rem; /* 394px */
+      height: 18.9375rem; /* 303px */
     }
   }
 
