--- a/style.css
+++ b/style.css
@@ -390,7 +390,6 @@ article p {
     justify-items: center;
   }
   #intro-section img {
-    /*aspect ratio = 1.30*/
     width: 23rem; /* 368px */
     height: 17.69rem; /* 283.07px */
   }
@@ -403,7 +402,6 @@ article p {
     padding-bottom: 7.375rem;
   }
   #intro-section img {
-    /*aspect ratio = 1.30*/
     width: 18rem; /* 288px */
     height: 13.845625rem; /* 221.53px */
   }
@@ -519,8 +517,8 @@ footer {
 }
 
 .footer-background {
-  height: 26.75rem; /* 428px */
-  width: 100%;
+  /*aspect ratio = 4.68*/
+  aspect-ratio: 0.88;
   position: absolute;
   bottom: 0;
   z-index: -1;
@@ -561,6 +559,6 @@ footer {
     margin-top: 0rem;
   }
   .footer-background {
-    height: 19.25rem; /* 308px */
+    aspect-ratio: 4.68;
   }
 }
