--- a/assets/stylesheets/_footer.scss
+++ b/assets/stylesheets/_footer.scss
@@ -30,9 +30,6 @@ footer {
 }
 
 .footer-background {
-  /*aspect ratio = 4.68*/
-  // height: 26.75rem; /* 428px */
-  // width: 100%;
   aspect-ratio: 0.88;
   position: absolute;
   bottom: 0;
@@ -55,6 +52,10 @@ footer {
     p {
       max-width: 35.8125rem; /* 573px */
     }
+  }
+
+  .footer-background {
+    aspect-ratio: 1.8;
   }
 }
 
@@ -85,7 +86,6 @@ footer {
   }
 
   .footer-background {
-    // height: 19.25rem; /* 308px */
     aspect-ratio: 4.68;
   }
 }
