--- a/style.css
+++ b/style.css
@@ -346,8 +346,7 @@ article p {
   row-gap: 3rem;
 }
 #intro-section img {
-  width: 11rem; /* 176px */
-  height: 8.46125rem; /* 135.38px */
+  aspect-ratio: 1.3;
 }
 #intro-section img:first-child {
   grid-area: hero-left;
@@ -389,10 +388,6 @@ article p {
     row-gap: 4.5rem;
     justify-items: center;
   }
-  #intro-section img {
-    width: 23rem; /* 368px */
-    height: 17.69rem; /* 283.07px */
-  }
 }
 @media (min-width: 80rem) {
   #intro-section {
@@ -400,10 +395,6 @@ article p {
     column-gap: 5.5rem;
     align-items: center;
     padding-bottom: 7.375rem;
-  }
-  #intro-section img {
-    width: 18rem; /* 288px */
-    height: 13.845625rem; /* 221.53px */
   }
   #intro-section__article {
     padding: 2.9375rem 0rem 0rem 0rem; /* 47px = 2.9375rem */
@@ -423,8 +414,7 @@ article p {
 }
 #what-is-it img {
   border-radius: 0.5rem;
-  width: 9.4375rem; /* 151px */
-  height: 8.9375rem; /* 143px */
+  aspect-ratio: 1.055;
 }
 #what-is-it img:first-child {
   grid-area: image-woman-in-videocall;
@@ -475,8 +465,7 @@ article p {
     justify-items: center;
   }
   #what-is-it img {
-    width: 10.25rem; /* 164px */
-    height: 9.75rem; /* 156px */
+    aspect-ratio: 1.051;
   }
 }
 @media (min-width: 80rem) {
@@ -487,8 +476,7 @@ article p {
     grid-template-rows: auto 1.875rem auto;
   }
   #what-is-it img {
-    width: 15.9375rem; /* 255px */
-    height: 15.125rem; /* 242px */
+    aspect-ratio: 1.053;
   }
 }
 .footer {
@@ -517,7 +505,6 @@ footer {
 }
 
 .footer-background {
-  /*aspect ratio = 4.68*/
   aspect-ratio: 0.88;
   position: absolute;
   bottom: 0;
@@ -538,6 +525,9 @@ footer {
   }
   .footer p {
     max-width: 35.8125rem; /* 573px */
+  }
+  .footer-background {
+    aspect-ratio: 1.8;
   }
 }
 @media (min-width: 80rem) {
