--- a/assets/stylesheets/_footer.scss
+++ b/assets/stylesheets/_footer.scss
@@ -30,7 +30,9 @@ footer {
 }
 
 .footer-background {
-  aspect-ratio: 0.88;
+  height: 26.75rem; /* 428px */
+  width: 100%;
+  // aspect-ratio: 4.68;
   position: absolute;
   bottom: 0;
   z-index: -1;
@@ -52,10 +54,6 @@ footer {
     p {
       max-width: 35.8125rem; /* 573px */
     }
-  }
-
-  .footer-background {
-    aspect-ratio: 1.8;
   }
 }
 
@@ -86,6 +84,7 @@ footer {
   }
 
   .footer-background {
-    aspect-ratio: 4.68;
+    height: 19.25rem; /* 308px */
+    // aspect-ratio: 0.88;
   }
 }
