Experimentin with aspect ratio

--- a/style.css
+++ b/style.css
@@ -517,16 +517,13 @@ footer {
 }
 
 .footer-background {
-  height: 26.75rem; /* 428px */
-  width: 100%;
+  aspect-ratio: 0.88;
   position: absolute;
   bottom: 0;
   z-index: -1;
   background-color: hsl(192, 37%, 48%);
 }
 .footer-background img {
-  height: 100%;
-  width: 100%;
   mix-blend-mode: soft-light;
   opacity: 0.5;
 }
@@ -559,8 +556,6 @@ footer {
     margin-top: 0rem;
   }
   .footer-background {
-    height: 19.25rem; /* 308px */
+    aspect-ratio: 4.68;
   }
 }
-
-/*# sourceMappingURL=style.css.map */
