Will experiment with aspect-ratio later

--- a/assets/stylesheets/_intro-section.scss
+++ b/assets/stylesheets/_intro-section.scss
@@ -9,6 +9,7 @@
   img {
     width: 11rem; /* 176px */
     height: 8.46125rem; /* 135.38px */
+    // aspect-ratio: 3;
 
     &:first-child {
       grid-area: hero-left;
