--- a/style.css
+++ b/style.css
@@ -517,8 +517,7 @@ footer {
 }
 
 .footer-background {
-  height: 26.75rem; /* 428px */
-  width: 100%;
+  aspect-ratio: 0.88;
   position: absolute;
   bottom: 0;
   z-index: -1;
@@ -559,6 +558,6 @@ footer {
     margin-top: 0rem;
   }
   .footer-background {
-    height: 19.25rem; /* 308px */
+    aspect-ratio: 4.68;
   }
 }
