(Experiment) : Removing the width and height from html and using aspect ratio

--- a/assets/stylesheets/_intro-section.scss
+++ b/assets/stylesheets/_intro-section.scss
@@ -7,9 +7,9 @@
   row-gap: $space-base-4;
 
   img {
-    width: 11rem; /* 176px */
-    height: 8.46125rem; /* 135.38px */
-    // aspect-ratio: 3;
+    // width: 11rem; /* 176px */
+    // height: 8.46125rem; /* 135.38px */
+    aspect-ratio: 1.3;
 
     &:first-child {
       grid-area: hero-left;
@@ -73,10 +73,10 @@
     row-gap: $space-l-2;
     justify-items: center;
 
-    img {
-      width: 23rem; /* 368px */
-      height: 17.69rem; /* 283.07px */
-    }
+    // img {
+    //   width: 23rem; /* 368px */
+    //   height: 17.69rem; /* 283.07px */
+    // }
   }
 }
 
@@ -87,10 +87,10 @@
     align-items: center;
     padding-bottom: $space-xl-5;
 
-    img {
-      width: 18rem; /* 288px */
-      height: 13.845625rem; /* 221.53px */
-    }
+    // img {
+    //   width: 18rem; /* 288px */
+    //   height: 13.845625rem; /* 221.53px */
+    // }
   }
 
   #intro-section__article {
