--- a/style.css
+++ b/style.css
@@ -346,8 +346,7 @@ article p {
   row-gap: 3rem;
 }
 #intro-section img {
-  width: 11rem; /* 176px */
-  height: 8.46125rem; /* 135.38px */
+  aspect-ratio: 1.3;
 }
 #intro-section img:first-child {
   grid-area: hero-left;
@@ -389,10 +388,6 @@ article p {
     row-gap: 4.5rem;
     justify-items: center;
   }
-  #intro-section img {
-    width: 23rem; /* 368px */
-    height: 17.69rem; /* 283.07px */
-  }
 }
 @media (min-width: 80rem) {
   #intro-section {
@@ -400,10 +395,6 @@ article p {
     column-gap: 5.5rem;
     align-items: center;
     padding-bottom: 7.375rem;
-  }
-  #intro-section img {
-    width: 18rem; /* 288px */
-    height: 13.845625rem; /* 221.53px */
   }
   #intro-section__article {
     padding: 2.9375rem 0rem 0rem 0rem; /* 47px = 2.9375rem */
