--- a/style.css
+++ b/style.css
@@ -346,7 +346,8 @@ article p {
   row-gap: 3rem;
 }
 #intro-section img {
-  aspect-ratio: 1.3;
+  width: 11rem; /* 176px */
+  height: 8.46125rem; /* 135.38px */
 }
 #intro-section img:first-child {
   grid-area: hero-left;
@@ -388,6 +389,10 @@ article p {
     row-gap: 4.5rem;
     justify-items: center;
   }
+  #intro-section img {
+    width: 23rem; /* 368px */
+    height: 17.69rem; /* 283.07px */
+  }
 }
 @media (min-width: 80rem) {
   #intro-section {
@@ -395,6 +400,10 @@ article p {
     column-gap: 5.5rem;
     align-items: center;
     padding-bottom: 7.375rem;
+  }
+  #intro-section img {
+    width: 18rem; /* 288px */
+    height: 13.845625rem; /* 221.53px */
   }
   #intro-section__article {
     padding: 2.9375rem 0rem 0rem 0rem; /* 47px = 2.9375rem */
@@ -508,7 +517,8 @@ footer {
 }
 
 .footer-background {
-  aspect-ratio: 0.88;
+  height: 26.75rem; /* 428px */
+  width: 100%;
   position: absolute;
   bottom: 0;
   z-index: -1;
@@ -549,6 +559,6 @@ footer {
     margin-top: 0rem;
   }
   .footer-background {
-    aspect-ratio: 4.68;
+    height: 19.25rem; /* 308px */
   }
 }
