--- a/style.css
+++ b/style.css
@@ -350,11 +350,10 @@ article p {
   grid-template-areas: "hero-left hero-right" "group-chat-article group-chat-article";
   column-gap: 1rem;
   row-gap: 3rem;
-  grid-template-columns: 18rem auto auto;
 }
 #intro-section img {
-  width: 100%;
-  height: auto;
+  width: 11rem; /* 176px */
+  height: 8.46125rem; /* 135.38px */
 }
 #intro-section img:first-child {
   grid-area: hero-left;
@@ -396,6 +395,10 @@ article p {
     row-gap: 4.5rem;
     justify-items: center;
   }
+  #intro-section img {
+    width: 23rem; /* 368px */
+    height: 17.69rem; /* 283.07px */
+  }
 }
 @media (min-width: 80rem) {
   #intro-section {
@@ -403,6 +406,10 @@ article p {
     column-gap: 5.5rem;
     align-items: center;
     padding-bottom: 7.375rem;
+  }
+  #intro-section img {
+    width: 18rem; /* 288px */
+    height: 13.845625rem; /* 221.53px */
   }
   #intro-section__article {
     padding: 2.9375rem 0rem 0rem 0rem; /* 47px = 2.9375rem */
